minor changes to about dialog

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/images">
         <file alias="CS_icon.png">images/CS_icon.png</file>
         <file alias="splash.png">images/splash.png</file>
+        <file alias="info-icon.png">images/info-icon.png</file>
         <file alias="quit.png">images/quit.png</file>
         <file alias="safe.png">images/safe.png</file>
         <file alias="settings.png">images/settings.png</file>
