--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/images">
         <file alias="CS_icon.png">images/CS_icon.png</file>
+        <file alias="warning.png">images/warning.png</file>
         <file alias="splash.png">images/splash.png</file>
         <file alias="info-icon.png">images/info-icon.png</file>
         <file alias="quit.png">images/quit.png</file>
