--- a/ui/aboutdialog.ui
+++ b/ui/aboutdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>318</width>
+    <width>405</width>
     <height>743</height>
    </rect>
   </property>
@@ -236,8 +236,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>278</width>
-           <height>329</height>
+           <width>349</width>
+           <height>334</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -441,6 +441,19 @@ Select Init keys.</string>
                <string/>
               </property>
              </widget>
+            </item>
+            <item row="4" column="1">
+             <spacer name="verticalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
